add Entra ID login/auth / project refactor

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "TenantId": "a316f897-2d81-4fe1-ae46-5431a84d8df0",
+    "Audience": "api://2668672d-7fee-4611-aeb5-bc87f5e84102"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "sergiosantosworkoutlook.onmicrosoft.com",
+    "TenantId": "a316f897-2d81-4fe1-ae46-5431a84d8df0",
+    "ClientId": "2668672d-7fee-4611-aeb5-bc87f5e84102",
+    "Audience": "api://2668672d-7fee-4611-aeb5-bc87f5e84102"
+  }
 }
